examples/public-reproductions/dgraph-charts-146/rendered/zero-service.yaml
---
# Source: dgraph/templates/zero/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: adjudicate-dgraph-zero
  namespace: dgraph-system
  labels:
    app: dgraph
    app.kubernetes.io/component: zero
    app.kubernetes.io/instance: adjudicate
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: dgraph
    app.kubernetes.io/version: v25.3.1
    chart: dgraph-25.3.1-preview2
    component: zero
    helm.sh/chart: dgraph-25.3.1-preview2
    heritage: Helm
    monitor: zero-dgraph-io
    release: adjudicate
spec:
  type: ClusterIP
  ports:
    - port: 5080
      targetPort: 5080
      name: grpc-zero
    - port: 6080
      targetPort: 6080
      name: http-zero
  selector:
    app: dgraph
    release: adjudicate
    component: zero
